--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!---------------navigation bar aaaaa---------------->
+    <!---------------navigation bar ---------------->
     <nav class="navbar navbar-default navbar-fixed-top container" role="navigation">
         <a class="navbar-brand" href="index.html"><img src="bootstrap-3.3.7-dist/fonts/img/logoBig.png" alt=""></a>
         <!-- Brand and toggle get grouped for better mobile display -->
