--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="bootstrap-3.3.7-dist/js/jquery-3.1.0.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/fonts/bruno_ace_regular.ttf">
     <link rel="stylesheet" type="text/css" href="sten.css">
     <link rel="fav icon" href="bootstrap-3.3.7-dist/fonts/img/webclip.png">
 
@@ -17,10 +18,11 @@
 <body>
     <!---------------navigation bar ---------------->
     <nav class="navbar navbar-default navbar-fixed-top container" role="navigation">
-        <a class="navbar-brand" href="index.html"><img src="bootstrap-3.3.7-dist/fonts/img/logoBig.png" alt=""></a>
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="noMob">Безплатна доставка | Връзка с нас
-            <p class="floatRight">Профил</p>
+        <div class="firstDiv">
+            <a class="navbar-brand" href="index.html"><img src="bootstrap-3.3.7-dist/fonts/img/logoBig.png" alt=""></a>
+            <p>Безплатна доставка | Връзка с нас</p>
+            <span>Профил</span>
         </div>
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -110,9 +112,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/baloons.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Etam</strong> Стилно бельо и бански костюми</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Etam</strong> Стилно бельо и бански костюми</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,9 +125,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/sunglassesM.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Armani</strong> Бъди елегантна: аксесоари</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-60%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Armani</strong> Бъди елегантна: аксесоари</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-60%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -132,9 +138,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/model.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Coven</strong> Смела крачка към лукса и елегантността</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-20%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Coven</strong> Смела крачка към лукса и елегантността</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-20%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -146,9 +154,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/rainingmen.jpg" class="img-responsive" align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Kenzo</strong> Подгответе се за студените дни</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-35%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Kenzo</strong> Подгответе се за студените дни</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-35%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -157,9 +167,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/hideandseek.jpg" class="img-responsive" align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Miranda Kerr</strong> Бъди елегантна: аксесоари</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-40%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Miranda Kerr</strong> Бъди елегантна: аксесоари</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-40%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -168,9 +180,11 @@
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/shoe.jpg" class="img-responsive" align="middle" alt="Cinque Terre">
                     </div>
-                    <div>
-                        <h3><strong>Melissa</strong> Бъди елегантна: аксесоари</h3>
-                        <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                    <div class="figure-caption text-right">
+                        <div>
+                            <h3><strong>Melissa</strong> Бъди елегантна: аксесоари</h3>
+                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -184,8 +198,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/redridinghood.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>ОТ ТУК</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>ОТ ТУК</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -195,8 +211,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/rainingmen2.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -206,8 +224,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/seekanddestroy.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -217,8 +237,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/jewelryW.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -230,8 +252,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/africaunite.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -241,8 +265,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/dress.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -252,8 +278,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/bags.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -263,8 +291,10 @@
                             <img src="bootstrap-3.3.7-dist/fonts/img/alendelon.jpg" class="img-responsive " align="middle" alt="Cinque Terre">
                         </div>
                         <div class="caption">
-                            <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
-                            <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            <div>
+                                <h5><strong>Melissa</strong> Бъди елегантна: аксесоари</h5>
+                                <p><span class="text-pink">Изтичаща</span> след 2 дни 3 часа 20мин <span class="pinkDisscount">-75%</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
