--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             </div>
         </div>
-        <div class="container lastAdded">
+        <div class="container lastAdded pinkCaptions">
             <h2>ПОСЛЕДНО ДОБАВЕНИ</h2>
             <div class="icon col-md-4 panel panel-default ">
                 <div class="panel-body">
@@ -149,7 +149,7 @@
         </div>
         <div class="container actual">
             <h2>ТЕКУЩИ</h2>
-            <div class="icon col-md-4 panel panel-default ">
+            <div class="icon col-md-4 panel panel-default pinkCaptions">
                 <div class="panel-body">
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/rainingmen.jpg" class="img-responsive" align="middle" alt="Cinque Terre">
