final for today

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                 </div>
             </div>
         </div>
-        <div class="container actual">
+        <div class="container actual pinkCaptions">
             <h2>ТЕКУЩИ</h2>
-            <div class="icon col-md-4 panel panel-default pinkCaptions">
+            <div class="icon col-md-4 panel panel-default">
                 <div class="panel-body">
                     <div class="icon-border">
                         <img src="bootstrap-3.3.7-dist/fonts/img/rainingmen.jpg" class="img-responsive" align="middle" alt="Cinque Terre">
